<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ClassScheduleView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp">

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#26A69A"
        android:paddingTop="0dp"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/TodayScheduleHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="16dp"
            android:text="@string/today_s_schedule"
            android:textColor="#444444"
            android:textSize="20sp" />

        <TableLayout
            android:id="@+id/TodayScheduleTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/TodayScheduleHeader">

            <TableRow
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:baselineAligned="false">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="64dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_green"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/schedule_card_class"
                    android:textColor="#444444"
                    android:textSize="16sp"
                    android:layout_width="0dp"
                    android:layout_gravity="top" />

                <TextView
                    android:id="@+id/TodayScheduleGradeClassText"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="64dp"
                    android:layout_weight="1"
                    android:background="#26A69A"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/schedule_card_class"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:layout_width="0dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#eeeeee"
                    android:gravity="center"
                    android:paddingBottom="3dp"
                    android:paddingTop="3dp"
                    android:text="@string/schedule_tablerow_morning_meeting" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="8:30-9:10"
                    android:textColor="#444444"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/schedule_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#dddddd"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="Ctrl-O"
                    android:textColor="#444444"
                    android:textSize="16dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="9:10-9:50"
                    android:textColor="#444444"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/schedule_two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="Ctrl-O"
                    android:textColor="#444444"
                    android:textSize="16dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#eeeeee"
                    android:gravity="center"
                    android:paddingBottom="3dp"
                    android:paddingTop="3dp"
                    android:text="小息" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="10:05-10:45"
                    android:textColor="#444444"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/schedule_three"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="Ctrl-O"
                    android:textColor="#444444"
                    android:textSize="16dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="10:45-11:25"
                    android:textColor="#444444"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/schedule_four"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="Ctrl-O"
                    android:textColor="#444444"
                    android:textSize="16dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#eeeeee"
                    android:gravity="center"
                    android:paddingBottom="3dp"
                    android:paddingTop="3dp"
                    android:text="小息" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="11:40-12:20"
                    android:textColor="#444444"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/schedule_five"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="Ctrl-O"
                    android:textColor="#444444"
                    android:textSize="16dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="12:20-13:00"
                    android:textColor="#444444"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/schedule_six"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="Ctrl-O"
                    android:textColor="#444444"
                    android:textSize="16dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#eeeeee"
                    android:gravity="center"
                    android:paddingBottom="3dp"
                    android:paddingTop="3dp"
                    android:text="午膳" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="14:00-14:40"
                    android:textColor="#444444"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/schedule_seven"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="Ctrl-O"
                    android:textColor="#444444"
                    android:textSize="16dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="14:40-15:20"
                    android:textColor="#444444"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/schedule_eight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="Ctrl-O"
                    android:textColor="#444444"
                    android:textSize="16dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="15:20-16:00"
                    android:textColor="#444444"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/schedule_nine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="Ctrl-O"
                    android:textColor="#444444"
                    android:textSize="16dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#eeeeee"
                    android:gravity="center"
                    android:paddingBottom="3dp"
                    android:paddingTop="3dp"
                    android:text="放學" />
            </TableRow>

        </TableLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_below="@+id/TodayScheduleTable"
            android:id="@+id/goToFullClassSchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_all_schedule"
            android:theme="@style/CardButtonTeal"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            />


    </RelativeLayout>

</android.support.v7.widget.CardView>
